# singleton-service

./: .gitignore  CLAUDE.md  README.md  docs-plan.md  mkdocs.yml  pyproject.toml
docs/: DOCUMENTATION_SUMMARY.md  changelog.md  contributing.md  help.md  index.md  install.md  quickstart.md
docs/.hooks/: __init__.py  main.py
docs/advanced/: async-services.md  circular-dependencies.md  debugging.md  index.md  migration-guide.md  performance.md
docs/api/: base-runnable.md  base-service.md  decorators.md  exceptions.md  index.md
docs/concepts/: best-practices.md  dependency-injection.md  error-handling.md  index.md  initialization.md  singleton-pattern.md
docs/examples/: auth-service.md  background-worker.md  cli-application.md  database-service.md  index.md  service-composition.md  testing-services.md  user-service.md  weather-service.md  web-server.md
docs/extra/: custom.css  custom.js
docs/tutorial/: dependencies.md  error-handling.md  first-service.md  health-checks.md  index.md  initialization-order.md  testing.md
src/singleton_provider/: __init__.py  base_provider.py  decorators.py  decorators.pyi  exceptions.py  main.py  main.pyi  provider.py
src/singleton_provider/_internal/: _guarded.py  _meta.py  _metaclass.py  _provider.py  _utils.py
src/singleton_service/: __init__.py  base_runnable.py  base_service.py  decorators.py  exceptions.py
src/tests/: conftest.py  test_init.py  test_initialize.py  test_metaclass.py  test_requires.py  test_setup_hook.py
