[project]
name = "singleton-service"
version = "0.1.0"
description = "A framework for building singleton services that depend on each other."
readme = "README.md"
authors = [
    { name = "vduseev", email = "vagiz@duseev.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
singleton-service = "singleton_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
