[project]
name = "singleton-provider"
version = "0.1.0"
description = "Modern and type-safe abstraction for building singletons that depend on each other."
readme = "README.md"
authors = [
    { name = "vduseev", email = "vagiz@duseev.com" }
]
maintainers = [
    { name = "vduseev", email = "vagiz@duseev.com" }
]
requires-python = ">=3.10"
dependencies = []
keywords = ["singleton", "provider", "dependency", "repository", "manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
"Homepage" = "https://github.com/vduseev/singleton-provider"
"Documentation" = "https://github.com/vduseev/singleton-provider"
"Repository" = "https://github.com/vduseev/singleton-provider"
"Issues" = "https://github.com/vduseev/singleton-provider/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
    "ruff>=0.8.5",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.48",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mike>=2.1.3",
]
examples = [
    "raquel>=0.3.2",
    "sqlmodel>=0.0.24",
    "fastapi>=0.100.0",
    "click>=8.0.0",
    "requests>=2.28.0",
    "aiofiles>=23.0.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
